# lambda-calculus

./: README.md  lambda-calculus.cabal
data/: source.txt
src/: Execution.hs  Language.hs  Main.hs  Parser.hs  Renamer.hs
