name:                lambda-calculus
version:             0.1.0.0
synopsis:            Small lambda calculus-like language comipler.
description:         Home project. Small lambda calculus-like language
                     comipler. Language should look similar to Haskell.
homepage:            https://github.com/githubuser/lambda-calculus#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
data-files:          data/source.txt

executable lambda-calculus
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , text >= 1.2 && < 2
                       , attoparsec >= 0.13 && < 1
                       , containers >= 0.5 && < 0.6
                       , transformers >= 0.5.5 && < 0.5.6
  other-modules:       Paths_lambda_calculus
                       , Language
                       , Parser
  autogen-modules:     Paths_lambda_calculus
  ghc-options:         -Wall
                       -Wno-name-shadowing
                       -Wno-unused-do-bind
                       -Werror
